--- a/front-end/src/welcome.html
+++ b/front-end/src/welcome.html
@@ -41,7 +41,7 @@
             class="btn btn-light close d-flex justify-content-center align-item-center"
           >
             <img
-              src="./../../../img/left-arrow-svgrepo-com.svg"
+              src="../img/left-arrow-svgrepo-com.svg"
               alt="close"
               title="close"
               style="width: 20px; height: auto"
